# urlblock

./: .gitignore  Makefile.am  README.md  configure.ac
src/: bitset.c  bitset.h  file.c  file.h  hash.c  hash.h  stringset.c  stringset.h  tld.h  urlblock.c  urlblock.h  util.c  util.h
src/tools/: generate.c
tests/: benchmark.c  fuzz.c  hash.c  url_block.c  url_parse.c  url_public_suffix.c
tests/data/: hosts.txt  paths.txt
utils/: import.py
